# terminal-trader

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Claude.md  LICENSE-APACHE  LICENSE-MIT  README.md  SCHWAB_API_ISSUES.md  etfs.tsv  schwab-api-spec.json  schwab-marketdata-spec.json  stocks.tsv
.claude/rules/: rust-conventions.md
schwab-marketdata/: Cargo.toml
schwab-marketdata/src/: lib.rs
schwab-trader/: Cargo.toml
schwab-trader/src/: lib.rs
src/: lib.rs  main.rs  util.rs
src/app/: lots.rs  mod.rs  operations.rs  seed.rs  symbols.rs
src/schwab/: auth.rs  backend.rs  client.rs  mod.rs  models.rs  options.rs  schwab_stream.rs  streamer_types.rs
src/tui/: account_pnl.rs  command.rs  command_box.rs  command_test.rs  lot_detail.rs  mod.rs  operations_page.rs  orders.rs  positions.rs
tests/: api.rs  balance_dump.rs
