[package]
name = "schwab-marketdata"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Generated Rust client for the Charles Schwab Market Data API."
repository = "https://github.com/alwayys-afk/terminal-trader"

[dependencies]
bytes = "1.9"
chrono = { version = "0.4", default-features=false, features = ["serde"] }
futures-core = "0.3"
progenitor-client = "0.13.0"
reqwest = { version = "0.13", default-features=false, features = ["json", "query", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
uuid = { version = "1.0", features = ["serde", "v4"] }

